--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
-Need to install the following packages:
-gitignore@0.7.0
-Ok to proceed? (y) 
-node_modules
+# dependencies
+/node_modules
+
+# build output
+/.next
+/out
+
+# environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# misc
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
